# ShengChengZi

./: .gitignore  README.md  eval_c2c_palette.py  gen_datasets.py  inference_c2c_cyclegan.py  inference_c2c_palette.py  inference_c2c_pix2pix.py  inference_c2cbi_scz.py  inference_r2c_glyffuser.py  inference_t2c_glyffuser.py  pyproject.toml  requirements.txt  setup.py  setup_repo.sh  test_c2c_cyclegan.py  test_c2c_palette.py  test_c2c_pix2pix.py  test_c2cbi_scz.py  test_r2c_glyffuser.py  test_t2c_glyffuser.py  train_c2c_cyclegan.py  train_c2c_palette.py  train_c2c_pix2pix.py  train_c2c_scz.py  train_c2c_scz_new.py  train_c2cbi_scz.py  train_c2cbi_scz_new.py  train_colab.ipynb  train_glyffuser_r2c.py  train_glyffuser_t2c.py  train_palette_c2c.py  train_r2c_glyffuser.py  train_scz_c2c.py  train_scz_c2c_new.py  train_t2c_glyffuser.py
config/: base_config.py  char2char_config.py  config.py  rand2char_config.py  text2char_config.py
configs/: __init__.py  base_config.py  c2c_cyclegan.py  c2c_palette.py  c2c_pix2pix.py  c2cbi_scz.py  char2char_bi_config.py  palette_config.py  r2c_glyffuser.py  rand2char_config.py  t2c_glyffuser.py  text2char_config.py
cyclegan_and_pix2pix/: cyclegan_network.py  networks.py  pix2pix_network.py
glyffuser/: LICENSE  README.md  t5.py
notebooks/: generate_char2char_dataset.ipynb  generate_datasets.ipynb  train_char2char_model.ipynb  train_rand2char_model.ipynb  train_text2char_model.ipynb
palette/: .gitignore  OLD_char2char.json  char2char.json  dataset.py  eval.py  palette_network.py  run.py  utils.py
runners/: gen_datasets.py
(+92 files in other folders)
